syntax = "proto3";

package NFMsg; 

enum EServerState
{
	EST_CRASH = 0;
	EST_NARMAL = 1;
	EST_BUSY = 2;
	EST_FIRE = 3;
	EST_MAINTEN = 4;
}

message ServerInfoReport
{
	
	int32   server_id = 1;
	string  server_name = 2;
	string  server_ip = 3;
	int32   server_port = 4;
	int32   server_inner_port = 5;
	int32   server_max_online = 6;
	int32   server_cur_count = 7;
	uint32  server_state = 8;
	int32   server_type = 9;
}

message ServerInfoReportList
{
	repeated ServerInfoReport server_list = 1;
}